--- a/src/scss/common/_common.scss
+++ b/src/scss/common/_common.scss
@@ -99,3 +99,60 @@
         }
     }
 }
+
+
+
+
+// nav code 
+.actice-nav {
+    position: fixed !important;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color:#253380 !important;
+    animation-name: fadeInUp;
+    animation-duration: 1s;
+    z-index: 9999;
+    // box-shadow: 0 2px 4px rgba(0,0,0,.2);
+  }
+  
+  @keyframes fadeInUp {
+    from {
+      opacity: 0;
+      top: -50px;
+    }
+    to {
+      opacity: 1;
+      top: 0;
+    }
+  }
+
+
+
+
+  .to-top{
+    width: 40px;
+    height: 40px;
+    background: rgba(0,0,0,0.3);
+    color: #fff;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display: none;
+    animation-name: fadeInUp;
+    animation-duration: 1s;
+    // border-radius: 50%;
+    z-index: 7777;
+    svg{
+      width: 20px;
+      height: 20px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+    }
+  }
