--- a/src/scss/layout/_navbar.scss
+++ b/src/scss/layout/_navbar.scss
@@ -51,6 +51,7 @@ header {
             gap: 5px;
             cursor: pointer;
             font-size: 13px;
+            position: relative;
             color: #ffffff;
             font-weight: 400;
             transition: 0.3s ease-in-out;
@@ -59,6 +60,35 @@ header {
             }
             .bi-chevron-down {
               font-size: 10px;
+            }
+
+            .united-hover {
+              list-style: none;
+              position: absolute;
+              top: 31px;
+              z-index: 9999;
+            
+              left: -35px;
+              
+              transition: .3s ease-in-out;
+               display: none;
+              background-color: #ffffff;
+              border-radius: 0 0 5px 5px;
+              padding: 16px 14px;
+           
+              .element2 {
+                color: #555555;
+                padding-top: 3px;
+                cursor: pointer;
+                transition: .3s ease-in-out;
+                transform: translateX(0px);
+                &:hover{
+                  transform: translateX(7px);
+                }
+              }
+            }
+            .united-active{
+              display: block;
             }
           }
           .english {
@@ -73,10 +103,7 @@ header {
             transition: 0.3s ease-in-out;
             &:hover {
               color: #00a2c2;
-              // .eng-hover{
-              //   display: block;
-              //   transform: translateY(0px);
-              // }
+            
             }
             .bi-chevron-down {
               font-size: 10px;
