--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -53,6 +53,7 @@ header .head-top .container .row .language .united {
   gap: 5px;
   cursor: pointer;
   font-size: 13px;
+  position: relative;
   color: #ffffff;
   font-weight: 400;
   transition: 0.3s ease-in-out;
@@ -62,6 +63,31 @@ header .head-top .container .row .language .united:hover {
 }
 header .head-top .container .row .language .united .bi-chevron-down {
   font-size: 10px;
+}
+header .head-top .container .row .language .united .united-hover {
+  list-style: none;
+  position: absolute;
+  top: 31px;
+  z-index: 9999;
+  left: -35px;
+  transition: 0.3s ease-in-out;
+  display: none;
+  background-color: #ffffff;
+  border-radius: 0 0 5px 5px;
+  padding: 16px 14px;
+}
+header .head-top .container .row .language .united .united-hover .element2 {
+  color: #555555;
+  padding-top: 3px;
+  cursor: pointer;
+  transition: 0.3s ease-in-out;
+  transform: translateX(0px);
+}
+header .head-top .container .row .language .united .united-hover .element2:hover {
+  transform: translateX(7px);
+}
+header .head-top .container .row .language .united .united-active {
+  display: block;
 }
 header .head-top .container .row .language .english {
   display: flex;
@@ -550,6 +576,372 @@ main #products .container .row .elements .product1 .product-text h2 {
   font-weight: 500;
   text-align: center;
 }
+main #thisweek .container .row .this-text {
+  border-bottom: 1px solid #e5e8ec;
+  margin-bottom: 2rem;
+  margin-top: 3rem;
+}
+main #thisweek .container .row .this-text p {
+  color: #111111;
+  font-size: 28px;
+  font-weight: 600;
+  margin-bottom: 2px;
+}
+main #trending .container .row .cards {
+  position: relative;
+  overflow: hidden;
+}
+main #trending .container .row .cards .cards-img {
+  width: 100%;
+  height: 210px;
+  position: static;
+  transition: 0.3s ease-in-out;
+}
+main #trending .container .row .cards .cards-img:hover .img-hover {
+  display: block;
+}
+main #trending .container .row .cards .cards-img:hover .img-icon {
+  right: 7px;
+}
+main #trending .container .row .cards .cards-img img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+  cursor: pointer;
+}
+main #trending .container .row .cards .cards-img .img-hover {
+  overflow: hidden;
+  position: absolute;
+  top: 4px;
+  display: none;
+  transition: 0.3s ease-in-out;
+}
+main #trending .container .row .cards .cards-img .img-hover img {
+  cursor: pointer;
+  transition: 0.3s ease-in-out;
+  transform: scale(1);
+}
+main #trending .container .row .cards .cards-img .img-hover img:hover {
+  transform: scale(1.2);
+}
+main #trending .container .row .cards .cards-img .img-icon {
+  position: absolute;
+  top: 11px;
+  right: -40px;
+  display: flex;
+  flex-direction: column;
+  transition: 0.3s ease-in-out;
+  gap: 6px;
+}
+main #trending .container .row .cards .cards-img .img-icon p {
+  margin: 0;
+  background-color: #fff;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition: 0.3s ease-in-out;
+}
+main #trending .container .row .cards .cards-img .img-icon p:hover {
+  background-color: #111111;
+}
+main #trending .container .row .cards .cards-img .img-icon p:hover .bi-heart {
+  cursor: pointer;
+  transition: 0.3s ease-in-out;
+}
+main #trending .container .row .cards .cards-img .img-icon p:hover .bi-heart:hover {
+  color: #fff;
+}
+main #trending .container .row .cards .cards-img .img-icon p:hover .bi-collection {
+  cursor: pointer;
+  transition: 0.3s ease-in-out;
+}
+main #trending .container .row .cards .cards-img .img-icon p:hover .bi-collection:hover {
+  color: #fff;
+}
+main #trending .container .row .cards .cards-img .img-icon p:hover .bi-eye {
+  cursor: pointer;
+  transition: 0.3s ease-in-out;
+}
+main #trending .container .row .cards .cards-img .img-icon p:hover .bi-eye:hover {
+  color: #fff;
+}
+main #trending .container .row .cards .cards-img .img-icon p:hover .bi-cart3 {
+  cursor: pointer;
+  transition: 0.3s ease-in-out;
+}
+main #trending .container .row .cards .cards-img .img-icon p:hover .bi-cart3:hover {
+  color: #fff;
+}
+main #trending .container .row .cards .cards-text {
+  padding-top: 20px;
+}
+main #trending .container .row .cards .cards-text p {
+  margin: 0;
+  color: #919191;
+  font-size: 13px;
+  font-weight: 500;
+}
+main #trending .container .row .cards .cards-text h2 {
+  color: #111111;
+  font-size: 16px;
+  margin: 0;
+  font-weight: 500;
+  padding-top: 4px;
+  cursor: pointer;
+  transition: 0.3s ease-in-out;
+}
+main #trending .container .row .cards .cards-text h2:hover {
+  color: #00a2c2;
+}
+main #trending .container .row .cards .cards-text .product-star .bi-star-fill {
+  color: #ffb800;
+  font-size: 12px;
+}
+main #trending .container .row .cards .cards-text .product-price {
+  padding-top: 14px;
+}
+main #trending .container .row .cards .cards-text .product-price span {
+  color: #00a2c2;
+  font-size: 17px;
+  font-weight: 500;
+}
+main #trending .container .row .cards .cards-text .product-price del {
+  color: #919191;
+  font-size: 14px;
+}
+main #trending .container .row .cards h3 {
+  margin: 0;
+  background-color: #00a2c2;
+  color: #fff;
+  font-size: 15px;
+  display: inline-block;
+  padding: 2px 9px;
+  border-radius: 8px;
+  position: absolute;
+  top: 16px;
+  left: 17px;
+}
+main #sale {
+  padding-top: 3rem;
+}
+main #sale .container .row .super-sale {
+  position: relative;
+}
+main #sale .container .row .super-sale .sale-img {
+  width: 100%;
+  height: 185px;
+  overflow: hidden;
+}
+main #sale .container .row .super-sale .sale-img:hover img {
+  transform: scale(1.3);
+}
+main #sale .container .row .super-sale .sale-img img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+  border-radius: 5px;
+  transform: scale(1);
+  cursor: pointer;
+  transition: 0.3s ease-in-out;
+}
+main #sale .container .row .super-sale .sale-text {
+  position: absolute;
+  top: 3rem;
+  left: 3rem;
+}
+main #sale .container .row .super-sale .sale-text p {
+  color: #111111;
+  margin: 0;
+  font-size: 17px;
+  font-weight: 600;
+}
+main #sale .container .row .super-sale .sale-text h2 {
+  color: #111111;
+  margin: 0;
+  font-size: 17px;
+  font-weight: 600;
+  padding-top: 7px;
+}
+main #sale .container .row .super-sale .sale-text h3 {
+  margin: 0;
+  color: #111111;
+  font-size: 14px;
+  font-weight: 400;
+  padding-top: 25px;
+  position: relative;
+}
+main #sale .container .row .super-sale .sale-text h3::before {
+  content: "";
+  position: absolute;
+  bottom: -4px;
+  left: 0;
+  height: 2px;
+  width: 27px;
+  background-color: #111111;
+}
+main #super .container .row .laptop-img {
+  width: 100%;
+  height: 705px;
+}
+main #super .container .row .laptop-img img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+}
+main #super .container .row .cards {
+  position: relative;
+  overflow: hidden;
+}
+main #super .container .row .cards .cards-img {
+  width: 100%;
+  height: 210px;
+  position: static;
+  transition: 0.3s ease-in-out;
+}
+main #super .container .row .cards .cards-img:hover .img-hover {
+  display: block;
+}
+main #super .container .row .cards .cards-img:hover .img-icon {
+  right: 7px;
+}
+main #super .container .row .cards .cards-img img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+  cursor: pointer;
+}
+main #super .container .row .cards .cards-img .img-hover {
+  overflow: hidden;
+  position: absolute;
+  top: 4px;
+  display: none;
+  transition: 0.3s ease-in-out;
+}
+main #super .container .row .cards .cards-img .img-hover img {
+  cursor: pointer;
+  transition: 0.3s ease-in-out;
+  transform: scale(1);
+}
+main #super .container .row .cards .cards-img .img-hover img:hover {
+  transform: scale(1.2);
+}
+main #super .container .row .cards .cards-img .img-icon {
+  position: absolute;
+  top: 11px;
+  right: -40px;
+  display: flex;
+  flex-direction: column;
+  transition: 0.3s ease-in-out;
+  gap: 6px;
+}
+main #super .container .row .cards .cards-img .img-icon p {
+  margin: 0;
+  background-color: #fff;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition: 0.3s ease-in-out;
+}
+main #super .container .row .cards .cards-img .img-icon p:hover {
+  background-color: #111111;
+}
+main #super .container .row .cards .cards-img .img-icon p:hover .bi-heart {
+  cursor: pointer;
+  transition: 0.3s ease-in-out;
+}
+main #super .container .row .cards .cards-img .img-icon p:hover .bi-heart:hover {
+  color: #fff;
+}
+main #super .container .row .cards .cards-img .img-icon p:hover .bi-collection {
+  cursor: pointer;
+  transition: 0.3s ease-in-out;
+}
+main #super .container .row .cards .cards-img .img-icon p:hover .bi-collection:hover {
+  color: #fff;
+}
+main #super .container .row .cards .cards-img .img-icon p:hover .bi-eye {
+  cursor: pointer;
+  transition: 0.3s ease-in-out;
+}
+main #super .container .row .cards .cards-img .img-icon p:hover .bi-eye:hover {
+  color: #fff;
+}
+main #super .container .row .cards .cards-img .img-icon p:hover .bi-cart3 {
+  cursor: pointer;
+  transition: 0.3s ease-in-out;
+}
+main #super .container .row .cards .cards-img .img-icon p:hover .bi-cart3:hover {
+  color: #fff;
+}
+main #super .container .row .cards .cards-text {
+  padding-top: 20px;
+}
+main #super .container .row .cards .cards-text p {
+  margin: 0;
+  color: #919191;
+  font-size: 13px;
+  font-weight: 500;
+}
+main #super .container .row .cards .cards-text h2 {
+  color: #111111;
+  font-size: 16px;
+  margin: 0;
+  font-weight: 500;
+  padding-top: 4px;
+  cursor: pointer;
+  transition: 0.3s ease-in-out;
+}
+main #super .container .row .cards .cards-text h2:hover {
+  color: #00a2c2;
+}
+main #super .container .row .cards .cards-text .product-star .bi-star-fill {
+  color: #ffb800;
+  font-size: 12px;
+}
+main #super .container .row .cards .cards-text .product-price {
+  padding-top: 14px;
+}
+main #super .container .row .cards .cards-text .product-price span {
+  color: #00a2c2;
+  font-size: 17px;
+  font-weight: 500;
+}
+main #super .container .row .cards .cards-text .product-price del {
+  color: #919191;
+  font-size: 14px;
+}
+main #super .container .row .cards h3 {
+  margin: 0;
+  background-color: #00a2c2;
+  color: #fff;
+  font-size: 15px;
+  display: inline-block;
+  padding: 2px 9px;
+  border-radius: 8px;
+  position: absolute;
+  top: 16px;
+  left: 17px;
+}
 
 footer {
   background-color: #f1f5f6;
@@ -953,4 +1345,51 @@ footer .foottwo .container .row .pay-img img {
   height: 52px;
   border-radius: 50%;
   background-size: 40% 40%;
+}
+
+.actice-nav {
+  position: fixed !important;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: #253380 !important;
+  animation-name: fadeInUp;
+  animation-duration: 1s;
+  z-index: 9999;
+}
+
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    top: -50px;
+  }
+  to {
+    opacity: 1;
+    top: 0;
+  }
+}
+.to-top {
+  width: 40px;
+  height: 40px;
+  background: rgba(0, 0, 0, 0.3);
+  color: #fff;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  display: none;
+  animation-name: fadeInUp;
+  animation-duration: 1s;
+  z-index: 7777;
+}
+.to-top svg {
+  width: 20px;
+  height: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
 }/*# sourceMappingURL=style.css.map */
